--- a/src/main/resources/view/Admin_form.fxml
+++ b/src/main/resources/view/Admin_form.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootNode" prefHeight="464.0" prefWidth="880.0" style="-fx-background-color: #f1f2f6;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.CreateAccountFormController">
+<AnchorPane fx:id="rootNode" prefHeight="464.0" prefWidth="880.0" style="-fx-background-color: #f1f2f6;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.AdminFormController">
    <children>
       <AnchorPane layoutX="403.0" layoutY="59.0" prefHeight="359.0" prefWidth="426.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 30;">
          <children>
