--- a/src/main/resources/view/Dashboard_form.fxml
+++ b/src/main/resources/view/Dashboard_form.fxml
@@ -14,28 +14,28 @@
    <children>
       <AnchorPane layoutX="-15.0" layoutY="-3.0" prefHeight="696.0" prefWidth="206.0" style="-fx-background-color: #4b6584;">
          <children>
-            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="129.0" onAction="#btnManageCustomerOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="               Manage Customer">
+            <JFXButton buttonType="RAISED" layoutX="27.0" layoutY="112.0" onAction="#btnManageCustomerOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="               Manage Customer">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="34.0" layoutY="339.0" onAction="#btnManageEmployeeOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="              Manage Employee">
+            <JFXButton buttonType="RAISED" layoutX="25.0" layoutY="274.0" onAction="#btnManageEmployeeOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="              Manage Employee">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="197.0" onAction="#btnManageItemOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="              Manage Items">
+            <JFXButton buttonType="RAISED" layoutX="25.0" layoutY="162.0" onAction="#btnManageItemOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="              Manage Items">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="407.0" onAction="#btnManageSupplierOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="                 Manage Supplier">
+            <JFXButton buttonType="RAISED" layoutX="25.0" layoutY="331.0" onAction="#btnManageSupplierOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="                 Manage Supplier">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -52,7 +52,7 @@
                </font>
             </Label>
             <Line endX="-72.40000915527344" layoutX="214.0" layoutY="682.0" startX="-100.0" />
-            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="547.0" onAction="#btnManageReportOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="                    Manage Report">
+            <JFXButton buttonType="RAISED" layoutX="25.0" layoutY="455.0" onAction="#btnManageReportOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="                    Manage Report">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -60,7 +60,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="269.0" onAction="#btnPlaceOrderOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="            Place Order">
+            <JFXButton buttonType="RAISED" layoutX="25.0" layoutY="217.0" onAction="#btnPlaceOrderOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="            Place Order">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -68,7 +68,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="34.0" layoutY="474.0" onAction="#btnManageMaterialOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="                 Manage Material">
+            <JFXButton buttonType="RAISED" layoutX="25.0" layoutY="392.0" onAction="#btnManageMaterialOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="                 Manage Material">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -76,37 +76,37 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXButton>
-            <ImageView fitHeight="34.0" fitWidth="36.0" layoutX="34.0" layoutY="129.0">
+            <ImageView fitHeight="34.0" fitWidth="36.0" layoutX="29.0" layoutY="112.0">
                <image>
                   <Image url="@image/icons8-customer-50.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="34.0" fitWidth="36.0" layoutX="44.0" layoutY="197.0">
+            <ImageView fitHeight="34.0" fitWidth="36.0" layoutX="34.0" layoutY="162.0">
                <image>
                   <Image url="@image/icons8-items-64.png" />
                </image>
             </ImageView>
-            <ImageView layoutX="47.0" layoutY="271.0">
+            <ImageView layoutX="32.0" layoutY="221.0">
                <image>
                   <Image url="@image/icons8-create-order-30.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="47.0" layoutY="341.0">
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="32.0" layoutY="278.0">
                <image>
                   <Image url="@image/icons8-employee-64.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="30.0" fitWidth="36.0" layoutX="44.0" layoutY="409.0">
+            <ImageView fitHeight="30.0" fitWidth="36.0" layoutX="29.0" layoutY="335.0">
                <image>
                   <Image url="@image/icons8-supplier-48.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="30.0" fitWidth="36.0" layoutX="44.0" layoutY="476.0">
+            <ImageView fitHeight="30.0" fitWidth="36.0" layoutX="34.0" layoutY="394.0">
                <image>
                   <Image url="@image/icons8-material-64.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="34.0" fitWidth="36.0" layoutX="44.0" layoutY="547.0">
+            <ImageView fitHeight="34.0" fitWidth="36.0" layoutX="34.0" layoutY="455.0">
                <image>
                   <Image url="@image/icons8-report-48.png" />
                </image>
@@ -121,6 +121,19 @@
                   <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
+            <JFXButton buttonType="RAISED" layoutX="25.0" layoutY="517.0" onAction="#manageAttendaceOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="            Manage Attendance">
+               <font>
+                  <Font name="System Bold" size="11.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </JFXButton>
+            <ImageView fitHeight="26.0" fitWidth="30.0" layoutX="32.0" layoutY="521.0">
+               <image>
+                  <Image url="@image/attendance.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <Label layoutX="206.0" layoutY="15.0" prefHeight="18.0" prefWidth="129.0" text="   Welcome Back !!">
@@ -149,6 +162,11 @@
             <Label layoutX="14.0" layoutY="34.0" text="information about your current business process....">
                <font>
                   <Font size="10.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblDate" layoutX="1088.0" layoutY="17.0" prefHeight="34.0" prefWidth="156.0" textFill="#5758bb">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
          </children>
