--- a/src/main/resources/view/Dashboard_form.fxml
+++ b/src/main/resources/view/Dashboard_form.fxml
@@ -7,12 +7,11 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="rootNode" prefHeight="681.0" prefWidth="1500.0" style="-fx-background-color: #778ca3;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.DashboardFormController">
    <children>
-      <AnchorPane layoutX="-15.0" layoutY="-3.0" prefHeight="696.0" prefWidth="206.0" style="-fx-background-color: #4b6584;">
+      <AnchorPane layoutX="-15.0" layoutY="-1.0" prefHeight="696.0" prefWidth="206.0" style="-fx-background-color: #4b6584;">
          <children>
             <JFXButton buttonType="RAISED" layoutX="27.0" layoutY="112.0" onAction="#btnManageCustomerOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="               Manage Customer">
                <font>
@@ -42,16 +41,6 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></JFXButton>
-            <Label layoutX="29.0" layoutY="650.0" text="Need help?..">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font></Label>
-            <Label layoutX="32.0" layoutY="668.0" text="Open help center here">
-               <font>
-                  <Font name="System Bold" size="10.0" />
-               </font>
-            </Label>
-            <Line endX="-72.40000915527344" layoutX="214.0" layoutY="682.0" startX="-100.0" />
             <JFXButton buttonType="RAISED" layoutX="25.0" layoutY="455.0" onAction="#btnManageReportOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="                    Manage Report">
                <font>
                   <Font name="System Bold" size="11.0" />
@@ -132,6 +121,19 @@
             <ImageView fitHeight="26.0" fitWidth="30.0" layoutX="32.0" layoutY="521.0">
                <image>
                   <Image url="@image/attendance.png" />
+               </image>
+            </ImageView>
+            <JFXButton buttonType="RAISED" layoutX="62.0" layoutY="639.0" onAction="#btnLogOutOnAction" prefHeight="34.0" prefWidth="82.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="       Log Out">
+               <font>
+                  <Font name="System Bold" size="11.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </JFXButton>
+            <ImageView fitHeight="18.0" fitWidth="24.0" layoutX="65.0" layoutY="647.0">
+               <image>
+                  <Image url="@image/icons8-log-in-30.png" />
                </image>
             </ImageView>
          </children>
