--- a/src/main/resources/view/logging_form.fxml
+++ b/src/main/resources/view/logging_form.fxml
@@ -11,11 +11,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootNode" prefHeight="501.0" prefWidth="880.0" style="-fx-background-color: #d1d8e0;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.LoggingFormController">
+<AnchorPane fx:id="rootNode" prefHeight="393.0" prefWidth="748.0" style="-fx-background-color: #d1d8e0;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.LoggingFormController">
    <children>
-      <AnchorPane layoutX="469.0" layoutY="129.0" prefHeight="346.0" prefWidth="384.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 30;">
+      <ImageView fitHeight="391.0" fitWidth="759.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@image/zerrin_1.jpg" />
+         </image>
+      </ImageView>
+      <AnchorPane layoutX="199.0" layoutY="35.0" prefHeight="323.0" prefWidth="330.0" style="-fx-background-color: CDB8F7; -fx-background-radius: 30;">
          <children>
-            <JFXTextField fx:id="txtpassword" labelFloat="true" layoutX="35.0" layoutY="179.0" prefHeight="26.0" prefWidth="334.0" promptText="Password">
+            <JFXTextField fx:id="txtpassword" labelFloat="true" layoutX="14.0" layoutY="179.0" prefHeight="26.0" prefWidth="291.0" promptText="Password">
                <effect>
                   <Blend>
                      <topInput>
@@ -24,12 +29,12 @@
                   </Blend>
                </effect>
             </JFXTextField>
-            <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="337.0" layoutY="180.0">
+            <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="277.0" layoutY="180.0">
                <image>
                   <Image url="@image/icons8-password-30.png" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="211.0" layoutY="297.0" onAction="#btnLoggingOnAction" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #009432; -fx-background-radius: 10;" text="    Log in">
+            <JFXButton buttonType="RAISED" layoutX="130.0" layoutY="271.0" onAction="#btnLoggingOnAction" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #009432; -fx-background-radius: 10;" text="    Log in">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -37,12 +42,12 @@
                   <Font name="System Bold" size="10.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="15.0" fitWidth="17.0" layoutX="217.0" layoutY="303.0">
+            <ImageView fitHeight="15.0" fitWidth="17.0" layoutX="130.0" layoutY="277.0">
                <image>
                   <Image url="@image/icons8-log-in-30.png" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="289.0" layoutY="297.0" onAction="#btnCreateAccountOnAction" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #1e90ff; -fx-background-radius: 10;" text="      Sign up">
+            <JFXButton buttonType="RAISED" layoutX="219.0" layoutY="271.0" onAction="#btnCreateAccountOnAction" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #1e90ff; -fx-background-radius: 10;" text="      Sign up">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -50,7 +55,7 @@
                   <Font name="System Bold" size="10.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="18.0" fitWidth="24.0" layoutX="289.0" layoutY="302.0">
+            <ImageView fitHeight="18.0" fitWidth="24.0" layoutX="219.0" layoutY="275.0">
                <image>
                   <Image url="@image/icons8-create-64.png" />
                </image>
@@ -60,7 +65,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="txtusername" labelFloat="true" layoutX="35.0" layoutY="93.0" prefHeight="26.0" prefWidth="334.0" promptText="UserName">
+            <JFXTextField fx:id="txtusername" labelFloat="true" layoutX="18.0" layoutY="92.0" prefHeight="26.0" prefWidth="291.0" promptText="UserName">
                <effect>
                   <Blend>
                      <topInput>
@@ -69,7 +74,7 @@
                   </Blend>
                </effect>
             </JFXTextField>
-            <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="337.0" layoutY="93.0">
+            <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="277.0" layoutY="93.0">
                <image>
                   <Image url="@image/icons8-user-50.png" />
                </image>
@@ -79,22 +84,11 @@
                   <AnchorPane layoutX="15.0" layoutY="20.0" prefHeight="8.0" prefWidth="10.0" style="-fx-background-color: #222f3e;" />
                </children>
             </AnchorPane>
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="362.0" layoutY="44.0" prefHeight="86.0" prefWidth="107.0" />
-      <ImageView fitHeight="111.0" fitWidth="131.0" layoutX="583.0" layoutY="6.0">
-         <image>
-            <Image url="@image/3426587.png" />
-         </image>
-      </ImageView>
-      <AnchorPane prefHeight="502.0" prefWidth="444.0" style="-fx-background-color: #d1d8e0;">
-         <children>
-            <ImageView fitHeight="368.0" fitWidth="429.0" layoutX="8.0" layoutY="133.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@image/loging%20new.jpeg" />
-               </image>
-            </ImageView>
-            <AnchorPane layoutX="8.0" layoutY="434.0" prefHeight="34.0" prefWidth="429.0" style="-fx-background-color: #ffffff;" />
+            <Label layoutX="125.0" layoutY="14.0" text="WelCome  !!">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
