--- a/src/main/resources/view/placeOrder_form.fxml
+++ b/src/main/resources/view/placeOrder_form.fxml
@@ -14,25 +14,27 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="1350.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.PlaceOrderFormController">
    <children>
-      <AnchorPane fx:id="rootNode" prefHeight="743.0" prefWidth="1450.0" style="-fx-background-color: #d1d8e0;">
+      <AnchorPane fx:id="rootNode" prefHeight="743.0" prefWidth="1450.0" style="-fx-background-color: #dcdde1;">
          <children>
             <ImageView fitHeight="307.0" fitWidth="345.0" layoutY="256.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/place-order1.png" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="316.0" layoutY="-1.0" prefHeight="746.0" prefWidth="1134.0" style="-fx-background-color: #8395a7;">
+            <AnchorPane layoutX="316.0" layoutY="-1.0" prefHeight="746.0" prefWidth="1134.0" style="-fx-background-color: #c8d6e5;">
                <children>
                   <Label layoutX="23.0" layoutY="90.0" text="Order Id -:">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
+                  <Label fx:id="lblOrderId" layoutX="163.0" layoutY="94.0" prefHeight="26.0" prefWidth="118.0" />
                   <Label layoutX="770.0" layoutY="90.0" text="Order Date -:">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
+                  <Label fx:id="lblOrderDate" layoutX="942.0" layoutY="94.0" prefHeight="26.0" prefWidth="142.0" />
                   <Label layoutX="23.0" layoutY="155.0" text="Customer Id -:">
                      <font>
                         <Font name="System Bold" size="24.0" />
@@ -43,6 +45,7 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
+                  <Label fx:id="lblCustomerName" layoutX="947.0" layoutY="159.0" prefHeight="26.0" prefWidth="142.0" />
                   <Label layoutX="29.0" layoutY="231.0" text="Code :  ">
                      <font>
                         <Font name="System Bold" size="18.0" />
@@ -53,39 +56,42 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
+                  <Label fx:id="lblDescription" layoutX="311.0" layoutY="261.0" prefHeight="26.0" prefWidth="118.0" />
                   <Label layoutX="538.0" layoutY="228.0" text="Unit Price :">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
+                  <Label fx:id="lblUnitPrice" layoutX="525.0" layoutY="261.0" prefHeight="26.0" prefWidth="118.0" />
                   <Label layoutX="748.0" layoutY="228.0" text="Qty on Hand :">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="1002.0" layoutY="224.0" prefHeight="35.0" prefWidth="63.0" style="-fx-background-radius: 40;" />
+                  <Label fx:id="lblQty" layoutX="747.0" layoutY="261.0" prefHeight="26.0" prefWidth="118.0" />
+                  <TextField fx:id="txtqty" layoutX="1002.0" layoutY="224.0" onAction="#txtQtyOnAction" prefHeight="35.0" prefWidth="63.0" style="-fx-background-radius: 40;" />
                   <Label layoutX="1018.0" layoutY="197.0" text="Qty">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <JFXButton buttonType="RAISED" layoutX="960.0" layoutY="274.0" prefHeight="50.0" prefWidth="142.0" style="-fx-background-color: #1e90ff; -fx-background-radius: 40;" text="           Add to Cart">
+                  <JFXButton buttonType="RAISED" layoutX="960.0" layoutY="274.0" onAction="#btnAddCartOnAction" prefHeight="50.0" prefWidth="142.0" style="-fx-background-color: #1e90ff; -fx-background-radius: 40;" text="           Add to Cart">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </JFXButton>
-                  <TreeTableView layoutX="126.0" layoutY="335.0" prefHeight="354.0" prefWidth="906.0">
+                  <TreeTableView fx:id="tblPlacwOrder" layoutX="126.0" layoutY="335.0" prefHeight="354.0" prefWidth="906.0">
                     <columns>
-                      <TreeTableColumn prefWidth="150.4000244140625" text="Code" />
+                      <TreeTableColumn fx:id="colCode" prefWidth="150.4000244140625" text="Code" />
                       <TreeTableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
-                        <TreeTableColumn prefWidth="150.4000244140625" text="Description" />
-                        <TreeTableColumn prefWidth="150.4000244140625" text="Qty" />
-                        <TreeTableColumn prefWidth="150.4000244140625" text="Unit Price" />
-                        <TreeTableColumn prefWidth="150.4000244140625" text="Total" />
-                        <TreeTableColumn prefWidth="150.4000244140625" text="Action" />
+                        <TreeTableColumn fx:id="colDescription" prefWidth="150.4000244140625" text="Description" />
+                        <TreeTableColumn fx:id="colQty" prefWidth="150.4000244140625" text="Qty" />
+                        <TreeTableColumn fx:id="colUnitPrice" prefWidth="150.4000244140625" text="Unit Price" />
+                        <TreeTableColumn fx:id="colTotal" prefWidth="150.4000244140625" text="Total" />
+                        <TreeTableColumn fx:id="colAction" prefWidth="150.4000244140625" text="Action" />
                     </columns>
                   </TreeTableView>
-                  <JFXButton buttonType="RAISED" layoutX="975.0" layoutY="705.0" prefHeight="35.0" prefWidth="127.0" style="-fx-background-color: #009432; -fx-background-radius: 30;" text="            Place Order">
+                  <JFXButton buttonType="RAISED" layoutX="975.0" layoutY="705.0" onAction="#btnPlaceOrderOnAction" prefHeight="35.0" prefWidth="127.0" style="-fx-background-color: #009432; -fx-background-radius: 30;" text="            Place Order">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -115,9 +121,9 @@
                         <Image url="@image/icons8-create-order-30.png" />
                      </image>
                   </ImageView>
-                  <JFXComboBox layoutX="92.0" layoutY="231.0" prefHeight="26.0" prefWidth="142.0" />
-                  <JFXComboBox layoutX="192.0" layoutY="159.0" prefHeight="26.0" prefWidth="223.0" />
-                  <JFXButton buttonType="RAISED" layoutX="436.0" layoutY="160.0" prefHeight="35.0" prefWidth="70.0" style="-fx-background-color: #0be881; -fx-background-radius: 40;" text="      New">
+                  <JFXComboBox fx:id="cmbItemCode" layoutX="92.0" layoutY="231.0" onAction="#cmbItemCodeOnAction" prefHeight="26.0" prefWidth="142.0" />
+                  <JFXComboBox fx:id="cmbCustomerId" layoutX="192.0" layoutY="159.0" onAction="#cmbCustomerIdOnAction" prefHeight="26.0" prefWidth="223.0" />
+                  <JFXButton buttonType="RAISED" layoutX="436.0" layoutY="160.0" onAction="#btnNewOnAction" prefHeight="35.0" prefWidth="70.0" style="-fx-background-color: #0be881; -fx-background-radius: 40;" text="      New">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -130,6 +136,7 @@
                         <Image url="@image/icons8-add-24.png" />
                      </image>
                   </ImageView>
+                  <Label fx:id="lblNetTotal" layoutX="124.0" layoutY="710.0" prefHeight="26.0" prefWidth="118.0" />
                </children>
             </AnchorPane>
          </children>
