--- a/src/main/resources/view/Attendance_form.fxml
+++ b/src/main/resources/view/Attendance_form.fxml
@@ -22,7 +22,7 @@
                   <Image url="@image/istockphoto-1167651240-612x612.jpg" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="336.0" layoutY="136.0" prefHeight="458.0" prefWidth="421.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 40;">
+            <AnchorPane layoutX="336.0" layoutY="136.0" prefHeight="458.0" prefWidth="443.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 40;">
                <children>
                   <Label layoutX="39.0" layoutY="77.0" text="Employee Id">
                      <font>
@@ -78,6 +78,19 @@
                      </cursor>
                   </RadioButton>
                   <ComboBox fx:id="cmbEmplooyeId" layoutX="148.0" layoutY="73.0" onAction="#cmbEmployeeIdOnAction" prefHeight="26.0" prefWidth="215.0" />
+                  <JFXButton buttonType="RAISED" layoutX="375.0" layoutY="72.0" onAction="#btnNewOnAction" prefHeight="27.0" prefWidth="45.0" style="-fx-background-color: #2ed573; -fx-background-radius: 20;" text="   New">
+                     <font>
+                        <Font name="System Bold" size="10.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
+                  <ImageView fitHeight="16.0" fitWidth="14.0" layoutX="375.0" layoutY="78.0">
+                     <image>
+                        <Image url="@image/icons8-add-24.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
             <Label layoutX="378.0" layoutY="19.0" prefHeight="35.0" prefWidth="351.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 40;" text="           Manage Attendance                ">
@@ -93,7 +106,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="791.0" layoutY="501.0" onAction="#btnCancelOnAction" prefHeight="36.0" prefWidth="75.0" style="-fx-background-color: #e84118; -fx-background-radius: 20;" text="Cancel">
+            <JFXButton buttonType="RAISED" layoutX="791.0" layoutY="501.0" onAction="#btnCancelOnAction" prefHeight="36.0" prefWidth="75.0" style="-fx-background-color: #e84118; -fx-background-radius: 20;" text="Delete">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
