--- a/src/main/resources/view/placeOrder_form.fxml
+++ b/src/main/resources/view/placeOrder_form.fxml
@@ -4,9 +4,9 @@
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TreeTableColumn?>
-<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,89 +14,106 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="1350.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.PlaceOrderFormController">
    <children>
-      <AnchorPane fx:id="rootNode" prefHeight="743.0" prefWidth="1450.0" style="-fx-background-color: #dcdde1;">
+      <AnchorPane fx:id="rootNode" prefHeight="743.0" prefWidth="1450.0" style="-fx-background-color: #778ca3;">
          <children>
-            <ImageView fitHeight="307.0" fitWidth="345.0" layoutY="256.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@image/place-order1.png" />
-               </image>
-            </ImageView>
-            <AnchorPane layoutX="316.0" layoutY="-1.0" prefHeight="746.0" prefWidth="1134.0" style="-fx-background-color: #c8d6e5;">
+            <AnchorPane layoutX="322.0" layoutY="-1.0" prefHeight="746.0" prefWidth="1134.0" style="-fx-background-color: #F8EFBA;">
                <children>
-                  <Label layoutX="23.0" layoutY="90.0" text="Order Id -:">
+                  <AnchorPane layoutX="656.0" layoutY="81.0" prefHeight="241.0" prefWidth="451.0" style="-fx-background-color: #a5b1c2; -fx-background-radius: 40;">
+                     <children>
+                        <Label layoutX="76.0" layoutY="20.0" text="Code :  ">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblUnitPrice" layoutX="163.0" layoutY="121.0" prefHeight="35.0" prefWidth="142.0" textFill="#6d214f">
+                           <font>
+                              <Font name="System Bold" size="24.0" />
+                           </font>
+                        </Label>
+                        <JFXComboBox fx:id="cmbItemCode" layoutX="163.0" layoutY="20.0" onAction="#cmbItemCodeOnAction" prefHeight="26.0" prefWidth="168.0" />
+                        <Label layoutX="30.0" layoutY="76.0" text="Description :">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblDescription" layoutX="163.0" layoutY="72.0" prefHeight="26.0" prefWidth="118.0" textFill="#6d214f">
+                           <font>
+                              <Font name="System Bold" size="24.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="46.0" layoutY="125.0" text="Unit Price :">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="27.0" layoutY="176.0" text="Qty on Hand :">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblQty" layoutX="163.0" layoutY="172.0" prefHeight="35.0" prefWidth="142.0" textFill="#6d214f">
+                           <font>
+                              <Font name="System Bold" size="24.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="11.0" layoutY="85.0" prefHeight="233.0" prefWidth="460.0" style="-fx-background-color: #a5b1c2; -fx-background-radius: 40;">
+                     <children>
+                        <Label layoutX="38.0" layoutY="8.0" text="Order Id -:">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblOrderId" layoutX="132.0" layoutY="10.0" prefHeight="26.0" prefWidth="118.0" textFill="#6d214f">
+                           <font>
+                              <Font name="System Bold" size="24.0" />
+                           </font>
+                        </Label>
+                     </children></AnchorPane>
+                  <Label layoutX="41.0" layoutY="142.0" text="Order Date -:">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblOrderDate" layoutX="190.0" layoutY="138.0" prefHeight="26.0" prefWidth="142.0" textFill="#6d214f">
                      <font>
                         <Font name="System Bold" size="24.0" />
+                     </font></Label>
+                  <Label layoutX="37.0" layoutY="202.0" text="Customer Id -:">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lblOrderId" layoutX="163.0" layoutY="94.0" prefHeight="26.0" prefWidth="118.0" />
-                  <Label layoutX="770.0" layoutY="90.0" text="Order Date -:">
+                  <Label layoutX="41.0" layoutY="258.0" text="Customer Name -:">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblCustomerName" layoutX="219.0" layoutY="254.0" prefHeight="26.0" prefWidth="142.0" textFill="#6d214f">
                      <font>
                         <Font name="System Bold" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblOrderDate" layoutX="942.0" layoutY="94.0" prefHeight="26.0" prefWidth="142.0" />
-                  <Label layoutX="23.0" layoutY="155.0" text="Customer Id -:">
+                     </font></Label>
+                  <TextField fx:id="txtqty" layoutX="521.0" layoutY="219.0" onAction="#txtQtyOnAction" prefHeight="35.0" prefWidth="63.0" style="-fx-background-radius: 40;">
                      <font>
-                        <Font name="System Bold" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="712.0" layoutY="154.0" text="Customer Name -:">
-                     <font>
-                        <Font name="System Bold" size="24.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblCustomerName" layoutX="947.0" layoutY="159.0" prefHeight="26.0" prefWidth="142.0" />
-                  <Label layoutX="29.0" layoutY="231.0" text="Code :  ">
+                        <Font name="System Bold" size="13.0" />
+                     </font></TextField>
+                  <Label layoutX="520.0" layoutY="184.0" text="Quantity">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="309.0" layoutY="228.0" text="Description :">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblDescription" layoutX="311.0" layoutY="261.0" prefHeight="26.0" prefWidth="118.0" />
-                  <Label layoutX="538.0" layoutY="228.0" text="Unit Price :">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblUnitPrice" layoutX="525.0" layoutY="261.0" prefHeight="26.0" prefWidth="118.0" />
-                  <Label layoutX="748.0" layoutY="228.0" text="Qty on Hand :">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblQty" layoutX="747.0" layoutY="261.0" prefHeight="26.0" prefWidth="118.0" />
-                  <TextField fx:id="txtqty" layoutX="1002.0" layoutY="224.0" onAction="#txtQtyOnAction" prefHeight="35.0" prefWidth="63.0" style="-fx-background-radius: 40;" />
-                  <Label layoutX="1018.0" layoutY="197.0" text="Qty">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <JFXButton buttonType="RAISED" layoutX="960.0" layoutY="274.0" onAction="#btnAddCartOnAction" prefHeight="50.0" prefWidth="142.0" style="-fx-background-color: #1e90ff; -fx-background-radius: 40;" text="           Add to Cart">
+                  <JFXButton buttonType="RAISED" layoutX="502.0" layoutY="271.0" onAction="#btnAddCartOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #1e90ff; -fx-background-radius: 40;" text="    Add to Cart">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </JFXButton>
-                  <TreeTableView fx:id="tblPlacwOrder" layoutX="126.0" layoutY="335.0" prefHeight="354.0" prefWidth="906.0">
-                    <columns>
-                      <TreeTableColumn fx:id="colCode" prefWidth="150.4000244140625" text="Code" />
-                      <TreeTableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
-                        <TreeTableColumn fx:id="colDescription" prefWidth="150.4000244140625" text="Description" />
-                        <TreeTableColumn fx:id="colQty" prefWidth="150.4000244140625" text="Qty" />
-                        <TreeTableColumn fx:id="colUnitPrice" prefWidth="150.4000244140625" text="Unit Price" />
-                        <TreeTableColumn fx:id="colTotal" prefWidth="150.4000244140625" text="Total" />
-                        <TreeTableColumn fx:id="colAction" prefWidth="150.4000244140625" text="Action" />
-                    </columns>
-                  </TreeTableView>
-                  <JFXButton buttonType="RAISED" layoutX="975.0" layoutY="705.0" onAction="#btnPlaceOrderOnAction" prefHeight="35.0" prefWidth="127.0" style="-fx-background-color: #009432; -fx-background-radius: 30;" text="            Place Order">
+                  <JFXButton buttonType="RAISED" layoutX="975.0" layoutY="705.0" onAction="#btnPlaceOrderOnAction" prefHeight="35.0" prefWidth="127.0" style="-fx-background-color: #009432; -fx-background-radius: 30;" text="            Place Order" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton buttonType="RAISED" layoutX="826.0" layoutY="705.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #009432; -fx-background-radius: 40;" text="Back">
+                  <JFXButton buttonType="RAISED" layoutX="826.0" layoutY="705.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="118.0" style="-fx-background-color: #009432; -fx-background-radius: 40;" text="Back" textFill="#f7f7f1">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -106,12 +123,12 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="300.0" layoutY="4.0" text="Place Your Order Here" textFill="#341f97">
+                  <Label layoutX="341.0" prefHeight="54.0" prefWidth="451.0" style="-fx-background-color: #222f3e; -fx-background-radius: 50;" text="              Place Your Order Here" textFill="WHITE">
                      <font>
-                        <Font name="System Bold Italic" size="36.0" />
+                        <Font name="System Bold Italic" size="24.0" />
                      </font>
                   </Label>
-                  <ImageView fitHeight="27.0" fitWidth="30.0" layoutX="975.0" layoutY="286.0">
+                  <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="512.0" layoutY="281.0">
                      <image>
                         <Image url="@image/icons8-cart-50.png" />
                      </image>
@@ -121,9 +138,8 @@
                         <Image url="@image/icons8-create-order-30.png" />
                      </image>
                   </ImageView>
-                  <JFXComboBox fx:id="cmbItemCode" layoutX="92.0" layoutY="231.0" onAction="#cmbItemCodeOnAction" prefHeight="26.0" prefWidth="142.0" />
-                  <JFXComboBox fx:id="cmbCustomerId" layoutX="192.0" layoutY="159.0" onAction="#cmbCustomerIdOnAction" prefHeight="26.0" prefWidth="223.0" />
-                  <JFXButton buttonType="RAISED" layoutX="436.0" layoutY="160.0" onAction="#btnNewOnAction" prefHeight="35.0" prefWidth="70.0" style="-fx-background-color: #0be881; -fx-background-radius: 40;" text="      New">
+                  <JFXComboBox fx:id="cmbCustomerId" layoutX="199.0" layoutY="190.0" onAction="#cmbCustomerIdOnAction" prefHeight="26.0" prefWidth="161.0" />
+                  <JFXButton buttonType="RAISED" layoutX="374.0" layoutY="193.0" onAction="#btnNewOnAction" prefHeight="35.0" prefWidth="70.0" style="-fx-background-color: #0be881; -fx-background-radius: 40;" text="      New">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -131,14 +147,33 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </JFXButton>
-                  <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="445.0" layoutY="169.0">
+                  <ImageView fitHeight="17.0" fitWidth="18.0" layoutX="382.0" layoutY="202.0">
                      <image>
                         <Image url="@image/icons8-add-24.png" />
                      </image>
                   </ImageView>
-                  <Label fx:id="lblNetTotal" layoutX="124.0" layoutY="710.0" prefHeight="26.0" prefWidth="118.0" />
+                  <Label fx:id="lblNetTotal" layoutX="124.0" layoutY="705.0" prefHeight="26.0" prefWidth="118.0" textFill="#c23616">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font></Label>
+                  <TableView fx:id="tblPlaceOrder" layoutX="54.0" layoutY="344.0" prefHeight="342.0" prefWidth="1007.0">
+                    <columns>
+                      <TableColumn fx:id="colCode" prefWidth="123.199951171875" text="Code" />
+                      <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
+                        <TableColumn fx:id="colDescription" prefWidth="199.19992065429688" text="Description" />
+                        <TableColumn fx:id="colQty" prefWidth="151.20001220703125" text="Qty" />
+                        <TableColumn fx:id="colUnitPrice" prefWidth="192.0" text="Unit_price" />
+                        <TableColumn fx:id="colTotal" prefWidth="192.0" text="Total" />
+                        <TableColumn fx:id="colAction" prefWidth="148.800048828125" text="Action" />
+                    </columns>
+                  </TableView>
                </children>
             </AnchorPane>
+            <ImageView fitHeight="385.0" fitWidth="322.0" layoutY="180.0">
+               <image>
+                  <Image url="@image/place-order1.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
